--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 imgElement.style.display = "block";
             } else {
                 // If invalid input, show a fun default image
-                imgElement.src = "https://via.placeholder.com/300/000000/FFFFFF?text=Try+Again!";
+                imgElement.src = "https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExMWg2dW94a2ozN3BjcGd6NDM3MDVjanp6dHdiY3Z1YXk5dWV1dWxqZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/vyTnNTrs3wqQ0UIvwE/giphy.gif";
                 imgElement.style.display = "block";
             }
         }
